--- a/index.html
+++ b/index.html
@@ -45,11 +45,10 @@ li{list-style: none;}
         <div class="s-wrap">
             <ul class="ll">
                 <!--安卓-->
-               <li><a id="ico2" href="http://down.sapdw.cn/wawa/wawa.apk"><img src="./img/android.jpg"></a></li>
             <!--ios-->
-               <li> <a id="ico1" href="http://wap.xingxiayu.com/d/index2.html#"><img src="./img/ios.jpg"></a></li>
+               <li> <a id="ico1" href="http://wap.xingxiayu.com/d/index2.html#"><img src="./img/ios.jpg" style="    left: 85px;position: relative;top: 110px;"></a></li>
             </ul>
-            <img src="./img/code.jpg" class="s-code">
+            <img src="./img/icon_apple.jpg" class="s-code">
         </div>
         <img src="./img/a04.jpg">
     </div>
@@ -67,7 +66,7 @@ li{list-style: none;}
     </div>
 </div>
 <div id="footer">宜昌圆梦科技有限公司 © 2018 YUANMENG All Rights Reserved.<br>
-联系我们：wangyimin2021@icloud.com</div>
+联系我们：19157375656@163.com</div>
 
 <script src="jquery.min.js"></script>
 <script>
