--- a/index.html
+++ b/index.html
@@ -36,7 +36,6 @@ li{list-style: none;}
 </div>
 <div id="content">
     <div id="ico1a" class="cang"><img src="./img/you.png"></div>
-    <div id="ico2b" class="cang"><img src="./img/dai.png"></div>
 	<div class="n">
         <div>
             <img src="./img/a01.jpg">
@@ -46,7 +45,7 @@ li{list-style: none;}
             <ul class="ll">
                 <!--安卓-->
             <!--ios-->
-               <li> <a id="ico1" href="http://wap.xingxiayu.com/d/index2.html#"><img src="./img/ios.jpg" style="    left: 85px;position: relative;top: 110px;"></a></li>
+               <li> <a id="ico1" href="https://apps.apple.com/cn/app/id1410093041"><img src="./img/ios.jpg" style="    left: 85px;position: relative;top: 110px;"></a></li>
             </ul>
             <img src="./img/icon_apple.jpg" class="s-code">
         </div>
